[Fix] align center with 稿件徵求中

--- a/src/assets/scss/CFP/bg.scss
+++ b/src/assets/scss/CFP/bg.scss
@@ -10,7 +10,7 @@
   width: 100vw;
   z-index: -1;
   position: absolute;
-  left: -12px; // offset
+  // left: -12px; // offset
 
   .korea-fish {
     top: 0;
